Added first bit of php code.

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Input Tasks for new day</h1>
-    <form>
+    <form action="new_day.php" method="post">
       <label for="day">Day:</label><br />
       <input type="date" id="day" name="day" /><br /><br />
       <!--- Datalist will be dynamic from values already in database -->
