php now checks if inputs are empty and reads in the date.

--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Input Tasks for new day</h1>
     <form action="new_day.php" method="post">
-      <label for="day">Day:</label><br />
-      <input type="date" id="day" name="day" /><br /><br />
+      <label for="date">Day:</label><br />
+      <input type="date" id="date" name="date"/><br /><br />
       <!--- Datalist will be dynamic from values already in database -->
       <table id="tbl-inputs">
         <tr>
