--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
 	  <h1>ProcStop</h1>
     <ul>
       <li><a href="add_tasks.php">Add Tasks</a></li>
+      <li><a href="view_tasks.php">View Tasks</a></li>
     </ul>
   </body>
 </html>
