Finally added a css file. Currently only the tasks table is visually enhanced.

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
     <title>ProcStop</title>
     <meta charset="UTF-8" />
     <script src="js/main.js"></script>
+	<link rel="stylesheet" href="css/main.css"/>
   </head>
   <body>
 	  <h1>ProcStop</h1>
