--- a/web/index.html
+++ b/web/index.html
@@ -7,10 +7,11 @@
 	<link rel="stylesheet" href="css/main.css"/>
   </head>
   <body>
-	  <h1>ProcStop</h1>
-    <ul>
+    <ul class="navbar">
+      <li><a class="active" href="index.html">Home</a></li>
       <li><a href="add_tasks.php">Add Tasks</a></li>
       <li><a href="view_tasks.php">View Tasks</a></li>
     </ul>
+	<h1>ProcStop</h1>
   </body>
 </html>
