--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>ProcStop</title>
     <meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/main.css" />
   </head>
