--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="add_tasks.php">Add Tasks</a></li>
       <li><a href="view_tasks.php">View Tasks</a></li>
+      <li><a href="stats.php">Stats</a></li>
     </ul>
     <h1>ProcStop</h1>
   </body>
